--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ DISCORD_CLIENT_ID=
 GUILD_ID=
 PORTAINER_URL=
 PORTAINER_API_KEY=
+CONTAINER_NAME=
+SERVER_NAME=
+JOIN_CODE_LOOP_COUNT=
+JOIN_CODE_LOOP_TIMEOUT_MILLIS=
