--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "dev" ]
-  pull_request:
-    branches: [ "master" ]
+    branches: [ "dev", "master" ]
 
 env:
   REGISTRY: ghcr.io
