--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   valheim-server-discord-bot:
     container_name: valheim-server-discord-bot
-    image: ghcr.io/floryn08/valheim-server-discord-bot:master
+    image: ghcr.io/floryn08/valheim-server-discord-bot:latest
     environment:
       DISCORD_TOKEN: ${DISCORD_TOKEN}
       DISCORD_CLIENT_ID: ${DISCORD_CLIENT_ID}
