--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 DISCORD_TOKEN=
 DISCORD_CLIENT_ID=
 GUILD_ID=
-PORTAINER_URL=
-PORTAINER_API_KEY=
-CONTAINER_NAME=
+DEPLOYMENT_NAME=
+NAMESPACE=
 SERVER_NAME=
 JOIN_CODE_LOOP_COUNT=
 JOIN_CODE_LOOP_TIMEOUT_MILLIS=
