--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7",
+    "@kubernetes/client-node": "^0.20.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1"
   }
