--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -6,9 +6,12 @@ on:
       - closed
     branches:
       - master
+  push:
+    branches:
+      - master
 
 jobs:
-  build:
+  tag:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -16,7 +19,22 @@ jobs:
       - uses: actions/checkout@v4.1.1
         with:
           fetch-depth: '0'
-      - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.69.0 # Don't use @master or @v1 unless you're happy to test the latest version
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
+      - name: Install GitVersion
+        uses: gittools/actions/gitversion/setup@v1.1.1
+        with:
+          versionSpec: '5.x'
+      - name: Determine Version
+        uses: gittools/actions/gitversion/execute@v1.1.1
+      - name: Display SemVer
+        run: |
+          echo "SemVer: $semVer" && echo "$major.$minor.$patch"
+      - name: Create tag
+        uses: actions/github-script@v7.0.1
+        with:
+          script: |
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'refs/tags/${{env.semVer}}',
+              sha: context.sha
+            })
