chore: update tag action

--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -1,12 +1,10 @@
 name: Tag
 
 on:
+  workflow_dispatch:
   pull_request:
     types:
       - closed
-    branches:
-      - master
-  push:
     branches:
       - master
 
