chore: added multi guild command refresh

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DISCORD_TOKEN=
 DISCORD_CLIENT_ID=
-GUILD_ID=
+GUILD_IDS= #comma separates ids ID1,ID2,ID3
 DEPLOYMENT_NAME=
 NAMESPACE=
 SERVER_NAME=
