--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -17,15 +17,32 @@ jobs:
       - uses: actions/checkout@v4.1.3
         with:
           fetch-depth: '0'
+      - name: Set up Node.js
+        uses: actions/setup-node@v4.0.2
+        with:
+          node-version: '20'
+
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v1.1.1
         with:
           versionSpec: '5.x'
+
       - name: Determine Version
         uses: gittools/actions/gitversion/execute@v1.1.1
+
       - name: Display SemVer
         run: |
           echo "SemVer: $semVer" && echo "$major.$minor.$patch"
+
+      - name: Bump package.json
+        run: |
+          npm version ${{env.semVer}}
+          npm ci
+
+      - name: Bump helm chart
+        run: | 
+          sed -i "s/^version:.*/version: ${{env.semVer}}/" deployment/helm/Chart.yaml
+
       - name: Create tag
         uses: actions/github-script@v7.0.1
         with:
