--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -21,6 +21,10 @@ jobs:
         uses: actions/setup-node@v4.0.2
         with:
           node-version: '20'
+      - name: Setup Git
+        run: |
+          git config --global user.email ${{secrets.EMAIL}}
+          git config --global user.name ${{secrets.NAME}}
 
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v1.1.1
