--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -49,6 +49,7 @@ jobs:
 
       - name: Push version updates
         run: |
+          git add .
           git commit -m "ci: version bump ${{env.semVer}}"
           git push
 
