--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -16,20 +16,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.3
         with:
-          fetch-depth: '0'
-      - name: Set up Node.js
-        uses: actions/setup-node@v4.0.2
-        with:
-          node-version: '20'
+          fetch-depth: "0"
+          token: ${{github.token}}
+
       - name: Setup Git
         run: |
           git config --global user.email ${{secrets.EMAIL}}
           git config --global user.name ${{secrets.NAME}}
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4.0.2
+        with:
+          node-version: "20"
+
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v1.1.1
         with:
-          versionSpec: '5.x'
+          versionSpec: "5.x"
 
       - name: Determine Version
         uses: gittools/actions/gitversion/execute@v1.1.1
@@ -44,7 +47,7 @@ jobs:
           npm ci
 
       - name: Bump helm chart
-        run: | 
+        run: |
           sed -i "s/^version:.*/version: ${{env.semVer}}/" deployment/helm/Chart.yaml
 
       - name: Push version updates
