--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4.1.3
         with:
           fetch-depth: "0"
-          token: ${{github.token}}
+          token: ${{secrets.GITHUB_TOKEN}}
 
       - name: Setup Git
         run: |
