--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -14,15 +14,17 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v4.1.3
+      - name: Initial checkout
+        uses: actions/checkout@v4.1.3
         with:
           fetch-depth: "0"
           token: ${{secrets.ACCESS_TOKEN}}
 
       - name: Setup Git
         run: |
-          git config --global user.email ${{secrets.EMAIL}}
-          git config --global user.name ${{secrets.NAME}}
+          git config user.email ${{secrets.EMAIL}}
+          git config user.name ${{secrets.NAME}}
+          git config commit.gpgsign true
 
       - name: Set up Node.js
         uses: actions/setup-node@v4.0.2
@@ -53,16 +55,24 @@ jobs:
       - name: Push version updates
         run: |
           git add .
-          git commit -m "ci: version bump ${{env.semVer}}"
+          git commit -S -m "ci: version bump ${{env.semVer}}"
+          git tag -s ${{env.semVer}}
           git push
 
       - name: Create tag
-        uses: actions/github-script@v7.0.1
-        with:
-          script: |
-            github.rest.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: 'refs/tags/${{env.semVer}}',
-              sha: context.sha
-            })
+        run: | 
+          git fetch
+          git pull
+          git tag -s -a ${{env.semVer}}
+          git push origin ${{env.semVer}}
+
+      # - name: Create tag
+      #   uses: actions/github-script@v7.0.1
+      #   with:
+      #     script: |
+      #       github.rest.git.createRef({
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         ref: 'refs/tags/${{env.semVer}}',
+      #         sha: context.sha
+      #       })
