--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -24,6 +24,7 @@ jobs:
         run: |
           git config user.email ${{secrets.EMAIL}}
           git config user.name ${{secrets.NAME}}
+          git config commit.gpgsign true
 
       - name: Set up Node.js
         uses: actions/setup-node@v4.0.2
