--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -1,9 +1,12 @@
 name: Release Charts
 
 on:
-  push:
+  workflow_dispatch:
+  pull_request:
+    types:
+      - closed
     branches:
-      - main
+      - master
 
 jobs:
   helm-chart:
