--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -34,6 +34,6 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
         with:
-          charts_dir: deployment/helm
+          charts_dir: deployment
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
