--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -2,11 +2,9 @@ name: Release Charts
 
 on:
   workflow_dispatch:
-  pull_request:
-    types:
-      - closed
-    branches:
-      - master
+  release:
+    types: 
+      - published
 
 jobs:
   helm-chart:
