--- a/deployment/helm/templates/deployment.yaml
+++ b/deployment/helm/templates/deployment.yaml
@@ -1,33 +1,33 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-discord-bot
   namespace: {{ .Values.namespace }}
   labels:
-    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/name: {{ .Release.Name }}-discord-bot
 spec:
   replicas: 1
   revisionHistoryLimit: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ .Release.Name }}
+      app.kubernetes.io/name: {{ .Release.Name }}-discord-bot
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ .Release.Name }}
+        app.kubernetes.io/name: {{ .Release.Name }}-discord-bot
     spec:
-      serviceAccountName: {{ .Release.Name }}
+      serviceAccountName: {{ .Release.Name }}-discord-bot
       containers:
-      - name: {{ .Release.Name }}
+      - name: {{ .Release.Name }}-discord-bot
         image: {{ .Values.discordBotImage }}
         imagePullPolicy: Always
         {{- if .Values.vault.enabled }}
         envFrom:
         - secretRef:
-            name: {{ .Release.Name }}
+            name: {{ .Release.Name }}-discord-bot
         {{- else }}
         envFrom:
         - configMapRef:
-            name: {{ .Release.Name }}
+            name: {{ .Release.Name }}-discord-bot
         {{- end }}
 
