--- a/deployment/helm/templates/role-binding.yaml
+++ b/deployment/helm/templates/role-binding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-discord-bot
   namespace: {{ .Values.namespace }}
 roleRef:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-discord-bot
   kind: Role
 subjects:
   - kind: ServiceAccount
-    name: {{ .Release.Name }}
+    name: {{ .Release.Name }}-discord-bot
     namespace: {{ .Values.namespace }}
