--- a/deployment/helm/templates/role.yaml
+++ b/deployment/helm/templates/role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-discord-bot
   namespace: {{ .Values.namespace }}
 rules:
   - apiGroups:
