--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -51,8 +51,10 @@ jobs:
       - name: Bump helm chart
         run: |
           sed -i "s/^version:.*/version: ${{env.semVer}}/" deployment/helm/Chart.yaml
+          sed -i "s/^appVersion:.*/appVersion: ${{env.semVer}}/" deployment/helm/Chart.yaml
+          sed -i "s/:[0-9]\+\.[0-9]\+\.[0-9]\+/:${{env.semVer}}/" deployment/helm/values.yaml
 
-      - name: Push version updates and create tags
+      - name: Push version updates and create tag
         run: |
           git add .
           git commit -m "ci: version bump ${{env.semVer}}"
