--- a/deployment/helm/values.yaml
+++ b/deployment/helm/values.yaml
@@ -1,4 +1,4 @@
 namespace: game-servers
-discordBotImage: ghcr.io/floryn08/valheim-server-discord-bot:latest
+discordBotImage: ghcr.io/floryn08/valheim-server-discord-bot:0.7.14
 vault:
   enabled: true
