--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "@kubernetes/client-node": "^0.21.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1"
+  },
+  "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "semantic-release": "^24.1.0"
   }
 }
