--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v4.1.7
         with:
           fetch-depth: "0"
+          token: ${{secrets.ACCESS_TOKEN}}
 
       - name: Set up Node.js
         uses: actions/setup-node@v4.0.3
