--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,7 +17,6 @@ jobs:
         uses: actions/checkout@v4.1.7
         with:
           fetch-depth: "0"
-          token: ${{secrets.ACCESS_TOKEN}}
 
       - name: Set up Node.js
         uses: actions/setup-node@v4.0.3
@@ -31,4 +30,4 @@ jobs:
       - name: Run Semantic Release
         run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TPKEN }}
