--- a/.releaserc
+++ b/.releaserc
@@ -2,8 +2,8 @@
   "branches": [
     "main",
     {
-      "name": "dev-*",
-      "prerelease": true
+      "name": "dev",
+      "prerelease": "dev-*"
     }
   ],
   "plugins": [
