--- a/.releaserc
+++ b/.releaserc
@@ -2,7 +2,7 @@
   "branches": [
     "main",
     {
-      "name": "dev-*",
+      "name": "dev-#46-fix-cocogitto",
       "prerelease": "dev"
     }
   ],
