chore: add @semantic-release/github to dependencies and create CHANGELOG.md

--- a/.releaserc
+++ b/.releaserc
@@ -10,6 +10,7 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
+    "@semantic-release/github",
     [
       "@semantic-release/npm",
       {
@@ -25,7 +26,10 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["package.json", "deployment/helm/Chart.yaml"]
+        "assets": [
+          "package.json",
+          "deployment/helm/Chart.yaml"
+        ]
       }
     ],
     "@semantic-release/github"
