--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.2",
     "semantic-release": "^24.1.0"
   }
 }
