chore: add package rules for GitHub Actions, Dockerfile, and Helm updates in renovate configuration

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,18 @@
     {
       "matchManagers": ["npm"],
       "groupName": "All npm dependencies"
+    },
+    {
+      "matchManagers": ["github-actions"],
+      "groupName": "GitHub Actions workflow updates"
+    },
+    {
+      "matchManagers": ["dockerfile"],
+      "groupName": "Dockerfile updates"
+    },
+    {
+      "matchManagers": ["helm"],
+      "groupName": "Helm chart updates"
     }
   ]
 }
