--- a/renovate.json
+++ b/renovate.json
@@ -15,7 +15,7 @@
       "groupName": "Dockerfile updates"
     },
     {
-      "matchManagers": ["helm"],
+      "matchManagers": ["helmv3"],
       "groupName": "Helm chart updates"
     }
   ]
