--- a/.releaserc
+++ b/.releaserc
@@ -17,6 +17,12 @@
       }
     ],
     [
+      "@semantic-release/exec",
+      {
+        "verifyReleaseCmd": ".github/ci-helpers/update_versions.sh ${nextRelease.version}"
+      }
+    ],
+    [
       "@semantic-release/git",
       {
         "assets": [
