--- a/.releaserc
+++ b/.releaserc
@@ -28,7 +28,8 @@
         "assets": [
           "package.json",
           "CHANGELOG.md",
-          "deployment/helm/Chart.yaml"
+          "deployment/helm/Chart.yaml",
+          "deployment/helm/values.yaml"
         ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
