--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +20,8 @@
     "@semantic-release/exec": "^7.0.0",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.2",
-    "semantic-release": "^24.1.0"
+    "@types/node": "^22.15.17",
+    "semantic-release": "^24.1.0",
+    "typescript": "^5.8.3"
   }
 }
