--- a/deployment/helm/values.yaml
+++ b/deployment/helm/values.yaml
@@ -1,4 +1,4 @@
 namespace: game-servers
-discordBotImage: ghcr.io/floryn08/valheim-server-discord-bot:1.1.4
+discordBotImage: ghcr.io/floryn08/valheim-server-discord-bot:v1.1.4
 vault:
   enabled: true
