--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "build": "tsup src/index.ts --minify",
+    "start": "node .",
+    "dev": "tsx watch src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,8 @@
     "@semantic-release/github": "^11.0.2",
     "@types/node": "^22.15.17",
     "semantic-release": "^24.1.0",
+    "tsup": "^8.4.0",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
 }
