--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,18 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4.2.2
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4.4.0
+        with:
+          cache: "npm"
+          node-version: "22"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
       - name: Log in to the Container registry
         uses: docker/login-action@v3.4.0
         with:
