--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,6 +27,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Run tests
+        run: npm test
+
+      - name: Build project
+        run: npm run build
+
       - name: Make version update script executable
         run: chmod +x .github/ci-helpers/update_versions.sh
 
