--- a/.releaserc
+++ b/.releaserc
@@ -29,7 +29,8 @@
           "package.json",
           "CHANGELOG.md",
           "deployment/helm/Chart.yaml",
-          "deployment/helm/values.yaml"
+          "deployment/helm/values.yaml",
+          "dist/**/*"
         ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
