--- a/.releaserc
+++ b/.releaserc
@@ -29,8 +29,7 @@
           "package.json",
           "CHANGELOG.md",
           "deployment/helm/Chart.yaml",
-          "deployment/helm/values.yaml",
-          "dist/**/*"
+          "deployment/helm/values.yaml"
         ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
