--- a/deployment/helm/templates/configmap.yaml
+++ b/deployment/helm/templates/configmap.yaml
@@ -7,9 +7,8 @@ data:
   DISCORD_TOKEN: ''
   DISCORD_CLIENT_ID: ''
   GUILD_IDS: ''
-  PORTAINER_URL: ''
-  PORTAINER_API_KEY: ''
-  CONTAINER_NAME: ''
+  DEPLOYMENT_NAME: ''
+  NAMESPACE: '{{ .Values.namespace }}'
   SERVER_NAME: ''
-  JOIN_CODE_LOOP_COUNT: ''
-  JOIN_CODE_LOOP_TIMEOUT_MILLIS: ''
+  JOIN_CODE_LOOP_COUNT: '20'
+  JOIN_CODE_LOOP_TIMEOUT_MILLIS: '5000'
