feat: docker support

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,22 @@
+# Runtime mode: 'kubernetes' or 'docker'
+RUNTIME_MODE=kubernetes
+
+# Discord Bot Credentials (Required for both modes)
 DISCORD_TOKEN=
 DISCORD_CLIENT_ID=
-GUILD_IDS= #comma separates ids ID1,ID2,ID3
+GUILD_IDS= #comma separated ids ID1,ID2,ID3
+
+# Kubernetes Mode Configuration (Required when RUNTIME_MODE=kubernetes)
 DEPLOYMENT_NAME=
 NAMESPACE=
+
+# Docker Mode Configuration (Required when RUNTIME_MODE=docker)
+CONTAINER_NAME=
+# DOCKER_SOCKET_PATH=/var/run/docker.sock  # Optional, defaults to /var/run/docker.sock
+
+# Common Configuration (Required for both modes)
 SERVER_NAME=
+
+# Optional Configuration
 JOIN_CODE_LOOP_COUNT=
 JOIN_CODE_LOOP_TIMEOUT_MILLIS=
