--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@kubernetes/client-node": "^1.0.0",
     "discord.js": "^14.14.1",
+    "dockerode": "^4.0.2",
     "dotenv": "^16.4.1"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.2",
     "@testing-library/jest-dom": "^6.9.1",
+    "@types/dockerode": "^3.3.31",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.19.1",
     "esbuild": "^0.25.4",
