--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -3,13 +3,20 @@ services:
     container_name: valheim-server-discord-bot
     image: ghcr.io/floryn08/valheim-server-discord-bot:latest
     environment:
+      # Runtime mode: 'docker' or 'kubernetes'
+      RUNTIME_MODE: docker
+      # Discord credentials
       DISCORD_TOKEN: ${DISCORD_TOKEN}
       DISCORD_CLIENT_ID: ${DISCORD_CLIENT_ID}
-      GUILD_ID: ${GUILD_ID}
-      PORTAINER_URL: ${PORTAINER_URL}
-      PORTAINER_API_KEY: ${PORTAINER_API_KEY}
+      GUILD_IDS: ${GUILD_IDS}
+      # Docker mode configuration
       CONTAINER_NAME: ${CONTAINER_NAME}
+      # DOCKER_SOCKET_PATH: /var/run/docker.sock  # Optional, defaults to this value
+      # Common configuration
       SERVER_NAME: ${SERVER_NAME}
-      JOIN_CODE_LOOP_COUNT: ${JOIN_CODE_LOOP_COUNT}
-      JOIN_CODE_LOOP_TIMEOUT_MILLIS: ${JOIN_CODE_LOOP_TIMEOUT_MILLIS}
+      JOIN_CODE_LOOP_COUNT: ${JOIN_CODE_LOOP_COUNT:-20}
+      JOIN_CODE_LOOP_TIMEOUT_MILLIS: ${JOIN_CODE_LOOP_TIMEOUT_MILLIS:-5000}
+    volumes:
+      # Mount Docker socket to allow container management
+      - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
