fix: update prerelease configuration to dynamically extract version from branch name

--- a/.releaserc
+++ b/.releaserc
@@ -3,7 +3,7 @@
     "main",
     {
       "name": "dev-**",
-      "prerelease": "dev"
+      "prerelease": "${name.replace(/^dev-/, '')}"
     }
   ],
   "plugins": [
