fix: enhance version extraction to include prerelease suffixes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,8 +97,8 @@ jobs:
           
           if grep -q "Published release" semantic-release-output.txt || grep -q "There is no previous release" semantic-release-output.txt; then
             echo "new_release_published=true" >> $GITHUB_OUTPUT
-            # Extract version from the semantic-release output
-            VERSION=$(grep -oP "Published release \K[0-9]+\.[0-9]+\.[0-9]+(-dev\.[0-9]+)?" semantic-release-output.txt || grep -oP "The next release version is \K[0-9]+\.[0-9]+\.[0-9]+(-dev\.[0-9]+)?" semantic-release-output.txt || cat VERSION)
+            # Extract version from the semantic-release output (including prerelease suffixes)
+            VERSION=$(grep -oP "Published release \K[0-9]+\.[0-9]+\.[0-9]+(-[a-z0-9.-]+)?" semantic-release-output.txt || grep -oP "The next release version is \K[0-9]+\.[0-9]+\.[0-9]+(-[a-z0-9.-]+)?" semantic-release-output.txt || cat VERSION)
             echo "new_release_version=$VERSION" >> $GITHUB_OUTPUT
           else
             echo "new_release_published=false" >> $GITHUB_OUTPUT
