--- a/.releaserc
+++ b/.releaserc
@@ -3,11 +3,21 @@
     "main",
     {
       "name": "dev-**",
-      "prerelease": true
+      "prerelease": "${name.replace(/^dev-/, '')}"
     }
   ],
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "releaseRules": [
+          {
+            "type": "chore",
+            "release": "patch"
+          }
+        ]
+      }
+    ],
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     [
