--- a/deployment/helm/Chart.yaml
+++ b/deployment/helm/Chart.yaml
@@ -4,5 +4,5 @@ description: A Helm chart for Kubernetes
 
 type: application
 
-appVersion: 1.3.3
-version: 1.3.3
+appVersion: 1.4.0-docker-support.3
+version: 1.4.0-docker-support.3
