--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "valheim-server-discord-bot",
-  "version": "1.3.3",
+  "version": "1.4.0-docker-support.3",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --minify --platform=node --target=node22 --outfile=dist/index.js",
+    "build": "esbuild src/index.ts --bundle --minify --platform=node --target=node22 --outfile=dist/index.js --packages=external",
     "start": "node .",
     "dev": "tsx watch src/index.ts",
     "test": "jest",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@kubernetes/client-node": "^1.0.0",
     "discord.js": "^14.14.1",
+    "dockerode": "^4.0.2",
     "dotenv": "^17.0.0"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^12.0.0",
     "@testing-library/jest-dom": "^6.9.1",
+    "@types/dockerode": "^3.3.31",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.0",
     "esbuild": "^0.25.4",
