feat: refactor for other games

--- a/.env.example
+++ b/.env.example
@@ -7,16 +7,25 @@ DISCORD_CLIENT_ID=
 GUILD_IDS= #comma separated ids ID1,ID2,ID3
 
 # Kubernetes Mode Configuration (Required when RUNTIME_MODE=kubernetes)
-DEPLOYMENT_NAME=
 NAMESPACE=
 
-# Docker Mode Configuration (Required when RUNTIME_MODE=docker)
-CONTAINER_NAME=
+# Docker Mode Configuration (Optional)
 # DOCKER_SOCKET_PATH=/var/run/docker.sock  # Optional, defaults to /var/run/docker.sock
 
-# Common Configuration (Required for both modes)
-SERVER_NAME=
+# Server Configurations (Required)
+# JSON array of server configs. Each server needs:
+#   - id: Unique identifier shown in Discord autocomplete (e.g., "valheim", "terraria")
+#   - deploymentName: Kubernetes deployment name (required for kubernetes mode)
+#   - containerName: Docker container name (required for docker mode)
+#   - serverName: Display name for the server (used in messages)
+#   - startedLogPattern: Pattern to search for in logs to detect server started
+#   - joinCodeWordIndex: (optional) Word index to extract join code from log line
+#
+# Examples:
+#   Valheim (with join code): startedLogPattern='Session "My Server" with join code', joinCodeWordIndex=5
+#   Terraria (no join code): startedLogPattern='Server started'
+SERVERS='[{"id":"valheim","deploymentName":"valheim-deployment","containerName":"valheim-container","serverName":"My Valheim Server","startedLogPattern":"Session \"My Valheim Server\" with join code","joinCodeWordIndex":5},{"id":"terraria","deploymentName":"terraria-deployment","containerName":"terraria-container","serverName":"My Terraria Server","startedLogPattern":"Server started"}]'
 
 # Optional Configuration
-JOIN_CODE_LOOP_COUNT=
-JOIN_CODE_LOOP_TIMEOUT_MILLIS=
+JOIN_CODE_LOOP_COUNT=20
+JOIN_CODE_LOOP_TIMEOUT_MILLIS=5000
