feat: refactor for other games

--- a/.env.example
+++ b/.env.example
@@ -15,16 +15,17 @@ NAMESPACE=
 # Server Configurations (Required)
 # JSON array of server configs. Each server needs:
 #   - id: Unique identifier shown in Discord autocomplete (e.g., "valheim", "terraria")
-#   - deploymentName: Kubernetes deployment name (required for kubernetes mode)
+#   - resourceName: Kubernetes resource name (deployment or statefulset, required for kubernetes mode)
+#   - resourceType: 'deployment' (default) or 'statefulset' (optional, kubernetes only)
 #   - containerName: Docker container name (required for docker mode)
 #   - serverName: Display name for the server (used in messages)
 #   - startedLogPattern: Pattern to search for in logs to detect server started
 #   - joinCodeWordIndex: (optional) Word index to extract join code from log line
 #
 # Examples:
-#   Valheim (with join code): startedLogPattern='Session "My Server" with join code', joinCodeWordIndex=5
-#   Terraria (no join code): startedLogPattern='Server started'
-SERVERS='[{"id":"valheim","deploymentName":"valheim-deployment","containerName":"valheim-container","serverName":"My Valheim Server","startedLogPattern":"Session \"My Valheim Server\" with join code","joinCodeWordIndex":5},{"id":"terraria","deploymentName":"terraria-deployment","containerName":"terraria-container","serverName":"My Terraria Server","startedLogPattern":"Server started"}]'
+#   Valheim (Deployment with join code): resourceType='deployment', startedLogPattern='Session "My Server" with join code', joinCodeWordIndex=5
+#   Terraria (StatefulSet, no join code): resourceType='statefulset', startedLogPattern='Server started'
+SERVERS='[{"id":"valheim","resourceName":"valheim-deployment","resourceType":"deployment","containerName":"valheim-container","serverName":"My Valheim Server","startedLogPattern":"Session \"My Valheim Server\" with join code","joinCodeWordIndex":5},{"id":"terraria","resourceName":"terraria-statefulset","resourceType":"statefulset","containerName":"terraria-container","serverName":"My Terraria Server","startedLogPattern":"Server started"}]'
 
 # Optional Configuration
 JOIN_CODE_LOOP_COUNT=20
