--- a/.env.example
+++ b/.env.example
@@ -7,16 +7,26 @@ DISCORD_CLIENT_ID=
 GUILD_IDS= #comma separated ids ID1,ID2,ID3
 
 # Kubernetes Mode Configuration (Required when RUNTIME_MODE=kubernetes)
-DEPLOYMENT_NAME=
 NAMESPACE=
 
-# Docker Mode Configuration (Required when RUNTIME_MODE=docker)
-CONTAINER_NAME=
+# Docker Mode Configuration (Optional)
 # DOCKER_SOCKET_PATH=/var/run/docker.sock  # Optional, defaults to /var/run/docker.sock
 
-# Common Configuration (Required for both modes)
-SERVER_NAME=
+# Server Configurations (Required)
+# JSON array of server configs. Each server needs:
+#   - id: Unique identifier shown in Discord autocomplete (e.g., "valheim", "terraria")
+#   - resourceName: Kubernetes resource name (deployment or statefulset, required for kubernetes mode)
+#   - resourceType: 'deployment' (default) or 'statefulset' (optional, kubernetes only)
+#   - containerName: Docker container name (required for docker mode)
+#   - serverName: Display name for the server (used in messages)
+#   - startedLogPattern: Pattern to search for in logs to detect server started
+#   - joinCodeWordIndex: (optional) Word index to extract join code from log line
+#
+# Examples:
+#   Valheim (Deployment with join code): resourceType='deployment', startedLogPattern='Session "My Server" with join code', joinCodeWordIndex=5
+#   Terraria (StatefulSet, no join code): resourceType='statefulset', startedLogPattern='Server started'
+SERVERS='[{"id":"valheim","resourceName":"valheim-deployment","resourceType":"deployment","containerName":"valheim-container","serverName":"My Valheim Server","startedLogPattern":"Session \"My Valheim Server\" with join code","joinCodeWordIndex":5},{"id":"terraria","resourceName":"terraria-statefulset","resourceType":"statefulset","containerName":"terraria-container","serverName":"My Terraria Server","startedLogPattern":"Server started"}]'
 
 # Optional Configuration
-JOIN_CODE_LOOP_COUNT=
-JOIN_CODE_LOOP_TIMEOUT_MILLIS=
+JOIN_CODE_LOOP_COUNT=20
+JOIN_CODE_LOOP_TIMEOUT_MILLIS=5000
